base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: skiff
  name: skiff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skiff
  template:
    metadata:
      labels:
        app: skiff
    spec:
      volumes:
        - name: web-data
          emptyDir: {}
      containers:
        - image: nginx
          name: nginx
          imagePullPolicy: always
          livenessProbe:
            httpGet:
              path: /up
              port: 80
          readinessProbe:
            httpGet:
              path: /up
              port: 80
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-data
              mountPath: /etc/nginx/conf.d
              readOnly: true
              subPath: config
            - name: web-data
              mountPath: /site
              readOnly: true
