base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: skiff
  name: skiff
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: skiff
