base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skiff
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - backend:
              service:
                name: skiff
                port:
                  number: 80
            path: /
            pathType: Prefix
